MVP README.md with demo video link and detailed project documentation
Expanded documentation to provide a comprehensive overview of the SwimWorkoutBuilder project, including its purpose, target users, core use cases, features, and instructions for running the application.  Includes link to access the demonstration video